--- a/web-client/public/games/metagame/index.html
+++ b/web-client/public/games/metagame/index.html
@@ -23,7 +23,7 @@
                 </button>
                 
                 <button id="hat-closet-button" class="ui-button">
-                    <img src="assets/hat-icon.png" alt="Hat Closet" class="hat-icon">
+                    <img id="hat-icon" src="assets/hat-icon.png" alt="Hat Closet" class="hat-icon">
                     <span>Hat Closet</span>
                 </button>
             </div>
@@ -60,7 +60,7 @@
         <div id="hat-inventory" class="hidden">
             <div class="inventory-header">
                 <h2>Hat Collection</h2>
-                <button id="close-inventory">×</button>
+                <button id="close-inventory" class="close-button">×</button>
             </div>
             <div class="rarity-filters">
                 <button class="rarity-filter active" data-rarity="all">All</button>
