Add fish earned at the end of the game

--- a/web-client/public/games/buckethat/index.html
+++ b/web-client/public/games/buckethat/index.html
@@ -15,6 +15,9 @@
     <div id="endScreen" style="display: none; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: white; padding: 20px; border: 1px solid black; text-align: center;">
         <h2>Game Over!</h2>
         <p>Your Score: <span id="finalScore">0</span></p>
+        <p>
+            Fish Earned: <img src="misc/fish-treat.png" alt="Fish Treat" style="height: 20px; vertical-align: middle;"> <span id="fishEarned">0</span>
+        </p>
         <button id="restartButton">Restart Game</button>
     </div>
 
